# bas

./: .gitattributes  .gitignore  README.md  openmemory.md
PyBas3/: IMPLEMENTATION_PLAN.md  TECHNICAL_REFERENCE.md  orchestrator.py  participants_db.json  pyproject.toml  requirements.txt  zone_config.json
PyBas3/agents/: AGENTIC_INSTRUCTIONS.md  AGENT_0_SHARED.md  AGENT_1_VISION.md  AGENT_2_SCORING.md  AGENT_3_TOUCHDESIGNER.md  INDEX.md  SESSION.md
PyBas3/agents/status/: agent_0_orchestrator.md  agent_1_vision.md  agent_2_scoring.md  agent_3_touchdesigner.md
PyBas3/common/: __init__.py  protocols.py  shared_memory.py
PyBas3/mediapipe/: download_model.py  live_dashboard.py  multi_person_detector.py  ndi_streamer.py  participant_tracker.py  participants_db.json  run_detector.sh  shared_memory_writer.py  test_vision.sh  zone_config.json
PyBas3/mediapipe/thumbnails/: .gitignore
PyBas3/pre_render/: CHRONOPHOTO_CONTEXT.md  depth_blend_video.py  generate_chronophoto_variations.py  pose_skeleton_render.py  remove_watermark.py  test_all_effects.py  test_depth_on_chroma.py
PyBas3/pre_render/outputs/: .gitignore
PyBas3/pre_render/time_dilation_test/: test_time_dilation.py
PyBas3/scoring/: pose_scorer.py  reference_builder.py  reference_poses.json  shared_memory_reader.py  test_scorer.py
PyBas3/td_scripts/: README_TD_INTEGRATION.md  ndi_discovery.py  score_watcher.py  td_execute.py  td_integration.py  td_participant_manager.py
PyBas3/td_scripts/ConnerTD/: ConnerTD.5.toe
PyBas3/tests/: test_integration.py
archive/PyBas2/: pyproject.toml  td_effect.py
(+1021 files in other folders)
