[project]
name = "pybas2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0,<2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "safetensors>=0.4.0",
    "packaging",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
da3 = ["depth-anything-3"]

[tool.uv.sources]
depth-anything-3 = { path = "da3_src", editable = true }

# Note: On macOS, set KMP_DUPLICATE_LIB_OK=TRUE to avoid OpenMP conflicts

